--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: LEGIT
 tagline: LEGIT OFFICIAL
 
 # YOUR/BRAND IMAGE URL
-Image_URL: https://github.com/harsh98trivedi.png
+Image_URL: LEGIT.jpg
 
 # CHANGE THE BACKGROUND IMAGE OF THE WEBSITE BY JUST ADDING THE IMAGE URL
 Cover_Image: https://picsum.photos/1080?nocache=
